<resources>
    <string name="app_name">[FinalProject] Grab</string>

    <!-- label text view -->
    <string name="label_logo">Grab9</string>
    <string name="label_instruction_enter_code">Enter the 6-digit code sent to</string>
    <string name="label_phone_number">+84 %1$s</string>
    <string name="label_question_receive_code">Didn\'t receive it ?</string>
    <string name="label_request_a_new_code">Request a new code in %1$s</string>
    <string name="label_request_new_code">
    <![CDATA[
        <html>
            <body>
              <pre><u><font color="#4CAF50">Request new code</font></u></pre>
            </body>
        </html>
    ]]>
    </string>
    <!--content description image -->
    <string name="cdi_logo">logo</string>

    <!-- title button -->
    <string name="title_login">LOGIN</string>
    <string name="title_vn">+84</string>

    <!-- hint edit text -->
    <string name="hint_name">Full name</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_email">Email</string>
    <string name="hint_code">000000</string>
    <string name="hint_current_location">Current location</string>
    <string name="hint_go_location">I\'m going to…</string>

    <!-- error message -->
    <string name="error_full_name">Enter full name</string>
    <string name="error_email">Enter a valid email</string>
    <string name="error_phone">Enter a valid phone</string>
    <string name="error_verification_code">Enter a valid verification code</string>

    <!-- label menu -->
    <string name="menu_profile">Profile</string>
    <string name="menu_logout">Logout</string>
    <string name="title_activity_maps">Passenger Map</string>
    <string name="expandable_image_view">expandable image view</string>
    <string name="pickup_request_button_text">Pickup Request</string>
    <string name="request_pickup_image">request pickup image</string>
    <string name="pickup_here_text">Pickup Here</string>
    <string name="optional_text">Optional</string>
    <string name="getting_your_driver">Getting your DRIVER...</string>

</resources>
