<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="5dp"
    app:cardElevation="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/pickup_image_view"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentStart="true"
            android:scaleType="centerCrop"
            android:contentDescription="@string/request_pickup_image"
            android:src="@drawable/ic_account"/>

        <TextView
            android:id="@+id/pickup_info_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/pickup_image_view"
            android:layout_alignParentEnd="true"
            android:layout_margin="8dp"
            android:text="@string/pickup_here_text"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/pickup_snippet_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/pickup_image_view"
            android:layout_below="@id/pickup_info_text_view"
            android:layout_alignBottom="@id/pickup_image_view"
            android:layout_margin="8dp"
            android:layout_alignParentEnd="true"
            android:text="@string/optional_text"
            android:textStyle="italic"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>